--- a/src/index.css
+++ b/src/index.css
@@ -693,6 +693,35 @@
   color: #000000;
   cursor: pointer;
 }
+.filter__cards-counter {
+  width: 10%;
+  height: 10%;
+  min-width: 200px;
+  min-height: 20px;
+  max-width: 100%;
+  max-height: 30px;
+  border: none;
+  border-radius: 25px;
+  font-family: "JetBrains Mono", monospace;
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 0.5);
+  background-color: #e8e8e8;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.filter__cards-counter-preloader {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .trash-box {
   display: none;
