--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -196,6 +196,33 @@
     color: $black;
     cursor: pointer;
   }
+
+  &__cards-counter {
+    width: 10%;
+    height: 10%;
+    @include min-width-and-height(200px, 20px);
+    @include max-width-and-height(100%, 30px);
+    border: none;
+    border-radius: 25px;
+    @include font-family-weight-size($jetbrains-font, $regular, 1.2rem);
+    line-height: 100%;
+    color: rgba($black, $half-opacity);
+    background-color: #e8e8e8;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__cards-counter-preloader{
+    width: 100%;
+    height: 100%;
+    background-color: $white;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .trash-box {
