--- a/blocks/add-card-form/_one-field-preloader.scss
+++ b/blocks/add-card-form/_one-field-preloader.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   background-color: #332F35;
-  border-radius: 25px;
+  border-bottom: 1px solid rgba($black, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
