--- a/blocks/go-to-button/_go-to-button.scss
+++ b/blocks/go-to-button/_go-to-button.scss
@@ -3,7 +3,7 @@
 .go-to-top-and-bottom-button {
   width: 48px;
   height: 48px;
-  border-radius: 25px;
+  border-bottom: 2px solid $black;
   @include linear-gradient(
       45deg,
       #a82d56 0%,
