--- a/blocks/single-card/_single-card.scss
+++ b/blocks/single-card/_single-card.scss
@@ -4,7 +4,8 @@
   width: 300px;
   height: 450px;
   background-color: $white;
-  border-radius: 25px;
+  border-radius: 2px;
+  border-bottom: 2px solid rgba($black, 0.2);
   display: flex;
   align-items: center;
   margin: 10px 10px;
