--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -139,11 +139,11 @@
     width: 300px;
     height: 40px;
     border: none;
-    border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
     background-color: $white;
+    border-bottom: 1px solid rgba($black, 0.2);
     margin-bottom: 15px;
     padding: 10px 20px;
   }
@@ -151,6 +151,7 @@
   &__select-holder {
     width: 300px;
     height: 40px;
+    border-bottom: 1px solid rgba($black, 0.2);
     margin-bottom: 15px;
     background: transparent;
   }
@@ -158,11 +159,10 @@
   &__checkbox-wrapper {
     width: 300px;
     height: 40px;
-    border-radius: 25px;
     display: flex;
     justify-content: space-around;
     margin-bottom: 15px;
-    border: 1px solid rgba($black, 0.2);
+    border-bottom: 1px solid rgba($black, 0.2);
     display: flex;
     align-items: center;
   }
@@ -232,8 +232,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
-    border-radius: 25px;
-    border: 1px solid rgba($black, 0.2);
+    border-bottom: 1px solid rgba($black, 0.2);
   }
 
   &__date-input {
@@ -241,7 +240,6 @@
     min-width: 220px;
     height: 40px;
     border: none;
-    border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: rgba($black, $half-opacity);
@@ -258,7 +256,6 @@
     width: 40px;
     height: 40px;
     border: none;
-    border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
@@ -279,11 +276,11 @@
     width: 300px;
     height: 40px;
     border: none;
-    border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.6rem);
     line-height: 100%;
     color: $black;
     background-color: $white;
+    border-bottom: 1px solid rgba($black, 0.2);
     cursor: pointer;
     margin-bottom: 15px;
   }
@@ -292,11 +289,11 @@
     width: 200px;
     height: 20px;
     border: none;
-    border-radius: 25px;
     @include font-family-weight-size($jetbrains-font, $regular, 1.2rem);
     line-height: 100%;
     color: $black;
     background-color: $white;
+    border-bottom: 1px solid rgba($black, 0.2);
     margin-bottom: 10px;
     display: flex;
     justify-content: center;
@@ -308,7 +305,6 @@
     width: 100%;
     height: 100%;
     background-color: $white;
-    border-radius: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -379,7 +375,6 @@
   width: 300px;
   height: 450px;
   background-color: transparent;
-  border-radius: 25px;
   display: flex;
   align-items: center;
   margin: 10px 20px;
